# profanity-filter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/: __init__.py  constants.py  profanity_filter.py
src/multilingual_profanity/: __init__.py  filter.py
src/multilingual_profanity/data/: profanity.parquet
tests/: test_profanity.py
